# simple-inventory

./: .env.example  LICENSE  README.md  compose.yaml  docker-compose.yml  nginx.conf
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  ruff.toml
backend/app/: config.py  crud.py  db.py  main.py  models.py  schemas.py  security.py  startup.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 004176ba0a81_make_item_external_id_nullabble.py  1270909b4f05_add_default_borrow_status.py  137b13a0336b_make_item_extern_id_nullable.py  1f5eb5952079_test_revision.py  224a66daec38_make_item_location_comment_nullable.py  72760dfd7a3c_init_database.py
backend/app/api/routers/: auth.py  borrows.py  health.py  items.py  users.py
backend/app/api/v1/routers/: auth.py  health.py
backend/app/core/: config.py  security.py
backend/app/schemas/: health_schema.py  schemas.py
backend/app/templates/: reset_password.html
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/components/: DragAndDrop.tsx  LoginForm.tsx  Sidebar.tsx  SidebarItem.tsx  Table.tsx  api.ts
frontend/src/context/: User.tsx
frontend/src/layouts/: Main.tsx
frontend/src/routes/: Admin.tsx  Dashboard.tsx  Home.tsx  Login.tsx  UserManagement.tsx
