[project]
name = "simple-inventory"
version = "0.1.0"
requires-python = ">= 3.10"
dependencies = [
    "alembic>=1.13.2",
    "authlib>=1.3.2",
    "fastapi>=0.114.0",
    "jinja2>=3.1.4",
    "loguru>=0.7.2",
    "pydantic[email]>=2.9.1",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.34",
    "uvicorn>=0.30.6",
    "ruff>=0.6.9",
    "psycopg2-binary>=2.9.9",
    "python-multipart>=0.0.12",
    "bcrypt>=4.2.0",
    "boto3>=1.35.34",
]
